--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- Uncomment the line below if you also wish to use adssn image logo -->
         <img src="assets/img/logo1.png" alt="">
       </a>
 
