--- a/team.html
+++ b/team.html
@@ -107,16 +107,17 @@
       
             <div class="col-lg-5 col-md-8" data-aos="fade-up" data-aos-delay="100">
               <div class="member">
-                <img src="assets/img/team/boniface11.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/team/petro_1.jpeg" class="img-fluid" alt="">
                 <div class="member-content">
                   <h4>PETRO MALAMULE</h4>
                   <span>Software Engineer</span>
-                  <p>Petro is a highly skilled software developer with a keen eye for design. As the lead developer, he is responsible for coding the core functionalities of our web app and ensuring the interface is user-friendly and visually appealing.</p>
+                  <p>Petro is a highly skilled software developer with a keen eye for branding design. As the lead developer, he is responsible for coding the core functionalities of our web app and ensuring the interface is user-friendly and visually appealing.</p>
                   <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://x.com/shaun_mcpetro"><i class="bi bi-twitter-x"></i></a>
+                    <a href="https://fb.com/shaun.mckoy"><i class="bi bi-facebook"></i></a>
+                    <a href="https://instagram.com/shaunpetro"><i class="bi bi-instagram"></i></a>
+                    <a href="https://linkedin.com/in/petromalamule/"><i class="bi bi-linkedin"></i></a>
+                    <a href="wa.me/+27813877744/"><i class="bi bi-whatsapp"></i></a>
                   </div>
                 </div>
               </div>
