--- a/team.html
+++ b/team.html
@@ -107,7 +107,7 @@
       
             <div class="col-lg-5 col-md-8" data-aos="fade-up" data-aos-delay="100">
               <div class="member">
-                <img src="assets/img/team/petro_1.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/team/petro_1.jpg" class="img-fluid" alt="">
                 <div class="member-content">
                   <h4>PETRO MALAMULE</h4>
                   <span>Software Engineer</span>
