--- a/team.html
+++ b/team.html
@@ -176,24 +176,20 @@
           <li><a href="#">Graphic Design</a></li>
         </ul>
       </div>
+<div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
+          <h4>Contact Us</h4>
+          <p class="mt-4"><strong>Phone:</strong> <span>+27 813877744</span></p>
+          <p class="mt-4"><strong>Phone:</strong> <span>+234 8120212639</span></p>
+          <p><strong>Email:</strong> <span>clintonfaze@outlook.com</span></p>
+          <p><strong>Email:</strong> <span>shaun.p.mckoy@gmail.com</span></p>
+        </div>
 
-      <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-        <h4>Contact Us</h4>
-        <!-- <p>A108 Adam Street</p>
-        <p>New York, NY 535022</p>
-        <p>United States</p> -->
-        <p class="mt-4"><strong>Phone:</strong> <span>+234 8120212639</span></p>
-        <p class="mt-4"><strong>Phone:</strong> <span>+234 8120212639</span></p>
-        <p><strong>Email:</strong> <span>clintonfaze@outlook.com</span></p>
-        <p><strong>Email:</strong> <span>petromul@gmail.com</span></p>
       </div>
-
     </div>
-  </div>
 
-  <div class="container copyright text-center mt-4">
-    <p>© <span>Copyright</span> <strong class="px-1 sitename">Film Finder</strong> <span>All Rights Reserved</span></p>
-    
+    <div class="container copyright text-center mt-4">
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Film Finder</strong> by <strong class="px-1 sitename">Petro & Boniface</strong> <span>All Rights Reserved</span></p>
+  
   </div>
 
 </footer>
